--- a/package.json
+++ b/package.json
@@ -16,17 +16,20 @@
   "dependencies": {
     "@mdx-js/mdx": "^1.6.21",
     "@mdx-js/react": "^1.6.21",
+    "babel-plugin-styled-components": "^1.12.0",
     "gatsby": "^2.27.5",
     "gatsby-plugin-manifest": "^2.7.0",
     "gatsby-plugin-mdx": "^1.5.0",
     "gatsby-plugin-offline": "^3.5.0",
     "gatsby-plugin-react-helmet": "^3.5.0",
+    "gatsby-plugin-styled-components": "^3.5.0",
     "gatsby-source-filesystem": "^2.6.1",
     "mdx-utils": "^0.2.0",
     "prism-react-renderer": "^1.1.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "prettier": "2.1.2"
